2007-05-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailSplashView.m: removed.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -getUIDsForICalPersons:iCalPersons]): add
	the uid to the list only when the user email is recognized by the
	user manager.

2007-05-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-isDeletionAllowed]): completed method with the new imap acl api.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -defaultAclRoles]):
	removed method.

	* SoObjects/SOGo/SOGoPermissions.m: added the new role
	"SOGoMailRole_MessageEraser".

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -defaultUserID]) 
	([UIxAclEditor -_prepareUsers]): take the new SOGoObject's
	"defaultUserID" method into account.

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor -userIsDefaultUser]) 
	([UIxUserRightsEditor -_initRights]): take the new SOGoObject's
	"defaultUserID" method into account.

	* UI/MailerUI/UIxMailUserRightsEditor.m: added all the missing
	methods to support the IMAP acls mentionned in the RFC 4314,
	removed the ones specific to Cyrus.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -defaultUserID]): new
	mandatory method for subclasses. Removed the SOGoDefaultUserID
	global var.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -defaultUserID]):
	overriden method to return @"<default>".

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-defaultUserID]): overriden method to return @"<default>".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-aclsForUser:uid]): overriden method.
	([SOGoMailFolder -removeAclsForUsers:users]): overriden method.
	([SOGoMailFolder -setRoles:rolesforUser:uid]): overriden method.
	([SOGoMailFolder -defaultUserID]): overriden method.
	([SOGoMailFolder -hasSupportForDefaultRoles]): overriden method.

2007-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder