@@ -1,3 +1,12 @@
+2007-05-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/NSDictionary+Utilities.[hm]: new extension
+	module.
+
+	* SoObjects/SOGo/NSObject+Utilities.m ([NSObject
+	-jsonRepresentation]): new interface method meant to be overriden
+	by the primitive classes.
+
 2007-05-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/MailerUI/UIxMailSplashView.m: removed.
